--- a/README.textile
+++ b/README.textile
@@ -3,6 +3,8 @@ h1. Panako - Acoustic Fingerprinting
 
 Panako is an "acoustic fingerprinting":https://en.wikipedia.org/wiki/Acoustic_fingerprint system. The system is able to extract fingerprints from an audio stream, and either store those fingerprints in a database, or find a match between the extracted fingerprints and stored fingerprints.  Several acoustic fingerprinting algorithms are implemented within Panako. The main algorithm, the Panako algorithm, has the feature that audio queries can be identified reliably and quickly even if they has been sped up, time stretched or pitch shifted with respect to the reference audio. The main focus of Panako is to serve as a demonstration of the Panako algorithm. Other acoustic fingerprinting schemes are implemented to serve as a baseline for comparison. More information can be found in the "article about Panako":http://www.terasoft.com.tw/conf/ismir2014/proceedings/T048_122_Paper.pdf.
 
+Panako has also uses for synchronization of data-streams. For those applications please see the article titled "Synchronizing Multimodal Recordings Using Audio-To-Audio Alignment":http://0110.be/posts/Synchronizing_Multimodal_Recordings_Using_Audio-To-Audio_Alignment_-_In_Journal_on_Multimodal_User_Interfaces.
+
 Please be aware of the patents "US7627477 B2":https://www.google.com/patents/US7627477 and "US6990453":https://www.google.com/patents/US6990453 and "perhaps others":http://www.shazam.com/music/web/productfeatures.html?id=1284. They describe techniques used in some algorithms implemented within Panako. The patents limit the use of some algorithms  under various conditions and for several regions. Please make sure to consult your intellectual property rights specialist if you are in doubt about these restrictions. If these restrictions apply, respect the patent holders rights. The first aim of Panako is to serve as a research platform to experiment with and improve fingerprinting algorithms.
 
 This document covers installation, usage and configuration of Panako.
@@ -444,6 +446,14 @@ bc. @inproceedings{six2014panako,
   title       = {{Panako - A Scalable Acoustic Fingerprinting System Handling Time-Scale and Pitch Modification}},
   booktitle   = {{Proceedings of the 15th ISMIR Conference (ISMIR 2014)}}, 
   year        =  2014
+}
+
+If you use the synchronization algorithms for research purposes, please cite the following work:
+
+bc. @article{six2015synksink_jmui,
+  author = {Six, Joren and Leman, Marc},
+  title = {Synchronizing Multimodal Recordings Using Audio-To-Audio Alignment - In Press},
+  journal = {Journal on Multimodal User Interfaces}
 }
 
 
