--- a/README.textile
+++ b/README.textile
@@ -18,6 +18,7 @@ h2. Overview
 # "Usage":#usage
 ## "Store Fingerprints":#store
 ## "Query for Matches":#query
+## "Monitor Stream for Matches":#monitor
 ## "Print Storage Statistics":#stats
 ## "Print Configuration":#configuration
 ## "Synchronize Media Files":#sync
@@ -61,7 +62,6 @@ To compile Panako, the JDK 7 or later is required. See the "installation instruc
 
 Panako uses the "Apache Ant":https://ant.apache.org/ build system. Install it on your system. Once ant and the other components are installed correctly the following commands should get you started:
 
-
 bc. wget http://panako.be/releases/Panako-latest/Panako-latest-src.zip
 unzip Panako-latest-src.zip
 #sudo apt-get install default-jdk ant libav-tools# Optionally install JDK, ant libav-tools (on Ubuntu).
@@ -73,9 +73,11 @@ cp ../doc/panako /usr/bin #copies the panako startup script to your path
 
 The last command copies the startup script in @doc/panako@ to a directory in your path. The script allows for easy access to Panako's functionality. If this does not work for you, you can still call Panako using @java -jar /opt/panako/panako.jar [..args]@.
 
-Panako decodes audio using by calling an utility that should be present on your system. Internally it reads the output of a sub-process via a pipe, in this case, the output are decoded PCM audio samples. By default Panako calls @avconv@, included in libav. @avconv@ should be installed correctly and should be available on your systems path. Alternatively, Panako can be configured to use any utility (like @ffmpeg@) that can pipe decoded audio streams in the format PCM, one channel, 16bit per sample. Libav version 9 or later is advised. On a Debian like system:
+Panako decodes audio using by calling ffmpeg, an utility for decoding audio. If it is not present on your system, Panako automatically tries to download a suitable version. If this attempt fails, however, it needs to be installed manually and should be available on your systems path.  On a Debian like system:
 
-bc. apt-get install libav-tools
+bc. apt-get install ffmpeg
+
+Panako calls a sub-process (ffmpeg) and reads decoded PCM audio samples via a pipe. By default Panako calls @ffmpeg@. Alternatively, Panako can be configured to use any utility (like @avconv@) that can pipe decoded audio streams in the format PCM, one channel, 16bit per sample.
 
 
 **Test Panako**. You might need a new shell to use @panako@.
@@ -118,6 +120,14 @@ The @query@ command extracts fingerprints from a short audio frament and tries t
 	
 bc. panako query short_audio.mp3
 
+h3(#monitor). Monitor Stream for Matches - **@panako monitor@**
+
+The @query@ command extracts fingerprints from a short audio frament and tries to match the fingerprints with the database. The incoming audio is, by default, chopped in parts of 25s with an overlap of 5s. So every @25-5=20s@ the database is queried and a result is printed to the command line.
+	
+bc. panako monitor [short_audio.mp3]
+
+If no audio file is given, the default microphone is used as input.
+
 
 h3(#stats). Print Storage Statistics - **@panako stats@**
 
@@ -151,10 +161,8 @@ This application simply returns the identifier that is used internally for a fil
 
  @panako resolve test.mp3@
  
- The internal identifiers are currently defined using integers.
+The internal identifiers are currently defined using integers.
  
-
-
 
 h3(#browser). Browse Fingerprints - **@panako browser@**
 
