NFFT Event Point Processor updates

--- a/README.textile
+++ b/README.textile
@@ -440,6 +440,9 @@ Some relevant reading material about acoustic fingerprinting. The order gives an
 # Fenet, Sebastien and Richard, Gael and Grenier, Yves __A Scalable Audio Fingerprint Method with Robustness to Pitch-Shifting__ (2011)
 # Ellis, Dan and Whitman, Brian and Porter, Alastair __Echoprint - An Open Music Identification Service__ (2011)
 # Sonnleitner, Reinhard  and Widmer, Gerhard __Quad-based Audio Fingerprinting Robust To Time And Frequency Scaling__ (2014)
+# Sonnleitner, Reinhard  and Widmer, Gerhard "__
+Robust Quad-Based Audio Fingerprinting__":http://dx.doi.org/10.1109/TASLP.2015.2509248 (2015)
+
 
 h2(#credits). Credits
 
